# DiscordClone

./: CMakeLists.txt  Doxyfile  README.md  icon.sh  install.sh  run.sh  test.sh
data/: script.txt  servers.txt  users.txt
docs/html/: CMakeCXXCompilerId_8cpp.html  CanalTexto_8cpp.html  CanalTexto_8cpp_8o_8d.html  CanalTexto_8h.html  CanalTexto_8h_source.html  CanalVoz_8cpp.html  CanalVoz_8cpp_8o_8d.html  CanalVoz_8h.html  CanalVoz_8h_source.html  Canal_8cpp.html  Canal_8cpp_8o_8d.html  Canal_8h.html  Canal_8h_source.html  Mensagem_8cpp.html  Mensagem_8cpp_8o_8d.html  Mensagem_8h.html  Mensagem_8h_source.html  README_8md.html  Servidor_8cpp.html  Servidor_8cpp_8o_8d.html  Servidor_8h.html  Servidor_8h_source.html  Sistema_8cpp.html  Sistema_8cpp_8o_8d.html  Sistema_8h.html  Sistema_8h_source.html  Usuario_8cpp.html  Usuario_8cpp_8o_8d.html  Usuario_8h.html  Usuario_8h_source.html  annotated.html  classCanal-members.html  classCanal.html  classCanalTexto-members.html  classCanalTexto.html  classCanalVoz-members.html  classCanalVoz.html  classMensagem-members.html  classMensagem.html  classServidor-members.html  (+30 more)
docs/latex/: CanalTexto_8cpp.tex  CanalTexto_8cpp_8o_8d.tex  CanalTexto_8h.tex  CanalTexto_8h_source.tex  CanalVoz_8cpp.tex  CanalVoz_8cpp_8o_8d.tex  CanalVoz_8h.tex  CanalVoz_8h_source.tex  Canal_8cpp.tex  Canal_8cpp_8o_8d.tex  Canal_8h.tex  Canal_8h_source.tex  (+31 more)
include/: Canal.h  CanalTexto.h  CanalVoz.h  Mensagem.h  Servidor.h  Sistema.h  Usuario.h
src/: Canal.cpp  CanalTexto.cpp  CanalVoz.cpp  Mensagem.cpp  Servidor.cpp  Sistema.cpp  Usuario.cpp  main.cpp
(+40 files in other folders)
